# Copernicus2ERDDAP

./: README.md  getTodaysGranule.py  pyproject.toml
copernicus_to_erddap/: __init__.py  download_granule.py
