[tool]
[tool.poetry]
name = "copernicus-to-erddap"
version = "0.0.1"
homepage = "https://github.com/USF-IMaRS/Copernicus2ERDDAP"
description = "ESA data for NOAA"
authors = ["Tylar Murray <email@tylar.info>"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
packages = [
    { include = "copernicus_to_erddap" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
openeo = "<0.39.0"

[tool.poetry.extras]
test = [
]

dev = [
]

doc = [
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
